--- a/vite-ext/package.json
+++ b/vite-ext/package.json
@@ -8,6 +8,7 @@
     "build": "vue-tsc && vite build"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "openai": "^4.2.0",
     "vue": "^3.2.47"
   },
